--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://mazenabdelgowad.github.io/mazenabdelgowad",
+  "homepage": "https://mazenabdelgawad700.github.io/mazenabdelgawad",
   "private": true,
   "version": "0.0.0",
   "type": "module",
